--- a/public/css/my_style.css
+++ b/public/css/my_style.css
@@ -21,9 +21,14 @@ body {
   font-size: 10px;
 }
 
+h1 {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
 nav#menu {
   height: 5vh;
-  padding: 15px 25px;
+  padding: 15px 10px;
   text-align: center;
 }
 
@@ -103,27 +108,17 @@ form#formPicture {
   margin: 20px auto;
 }
 
-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 10px 0;
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  font-size: 1.2em;
-}
-
 main {
   display: flex;
+  height: 100%;
+  width: 200px;
+  margin: 0 auto;
   justify-content: center;
   align-items: center;
-  height: 100%;
   background-image: url(../../img/webcamH.png);
   background-size: contain;
   background-repeat: no-repeat;
-  background-position-x: center;
+  background-position: center;
 }
 main svg {
   width: 20em;
@@ -135,7 +130,7 @@ main svg {
   stroke-dasharray: 283, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-0 4s 10s linear infinite alternate;
+  animation: circleInMotion-0 4s 1s linear infinite alternate;
 }
 
 @keyframes circleInMotion-0 {
@@ -155,7 +150,7 @@ main svg {
   stroke-dasharray: 258, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-1 4s 1s linear infinite alternate;
+  animation: circleInMotion-1 4s 7s linear infinite alternate;
 }
 
 @keyframes circleInMotion-1 {
@@ -175,7 +170,7 @@ main svg {
   stroke-dasharray: 233, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-2 4s 3s linear infinite alternate;
+  animation: circleInMotion-2 4s 1s linear infinite alternate;
 }
 
 @keyframes circleInMotion-2 {
@@ -195,7 +190,7 @@ main svg {
   stroke-dasharray: 208, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-3 4s 4s linear infinite alternate;
+  animation: circleInMotion-3 4s 5s linear infinite alternate;
 }
 
 @keyframes circleInMotion-3 {
@@ -215,7 +210,7 @@ main svg {
   stroke-dasharray: 183, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-4 4s 7s linear infinite alternate;
+  animation: circleInMotion-4 4s 3s linear infinite alternate;
 }
 
 @keyframes circleInMotion-4 {
@@ -235,7 +230,7 @@ main svg {
   stroke-dasharray: 158, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-5 4s 6s linear infinite alternate;
+  animation: circleInMotion-5 4s 9s linear infinite alternate;
 }
 
 @keyframes circleInMotion-5 {
@@ -255,7 +250,7 @@ main svg {
   stroke-dasharray: 133, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-6 4s 8s linear infinite alternate;
+  animation: circleInMotion-6 4s 9s linear infinite alternate;
 }
 
 @keyframes circleInMotion-6 {
@@ -275,7 +270,7 @@ main svg {
   stroke-dasharray: 108, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-7 4s 10s linear infinite alternate;
+  animation: circleInMotion-7 4s 3s linear infinite alternate;
 }
 
 @keyframes circleInMotion-7 {
@@ -295,7 +290,7 @@ main svg {
   stroke-dasharray: 83, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-8 4s 10s linear infinite alternate;
+  animation: circleInMotion-8 4s 8s linear infinite alternate;
 }
 
 @keyframes circleInMotion-8 {
@@ -315,7 +310,7 @@ main svg {
   stroke-dasharray: 58, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-9 4s 4s linear infinite alternate;
+  animation: circleInMotion-9 4s 7s linear infinite alternate;
 }
 
 @keyframes circleInMotion-9 {
@@ -335,7 +330,7 @@ main svg {
   stroke-dasharray: 33, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-10 4s 7s linear infinite alternate;
+  animation: circleInMotion-10 4s 3s linear infinite alternate;
 }
 
 @keyframes circleInMotion-10 {
@@ -355,7 +350,7 @@ main svg {
   stroke-dasharray: 8, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-11 4s 7s linear infinite alternate;
+  animation: circleInMotion-11 4s 2s linear infinite alternate;
 }
 
 @keyframes circleInMotion-11 {
@@ -369,6 +364,17 @@ main svg {
     stroke-dashoffset: 80;
     stroke-linecap: butt;
   }
+}
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 15px 0;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  font-size: 1.2em;
 }
 
 /*# sourceMappingURL=my_style.css.map */
