--- a/public/css/my_style.scss
+++ b/public/css/my_style.scss
@@ -26,9 +26,14 @@ body {
     font-size: 10px;
 }
 
+h1 { 
+    text-align: center;
+    margin-bottom: 60px;
+}
+
 nav#menu {
     height: 5vh;
-    padding: 15px 25px;
+    padding: 15px 10px;
     text-align: center;
 }
 
@@ -105,18 +110,6 @@ form#formPicture {
     margin: 20px auto;
 }
 
-footer{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 10px 0;
-    background-color: #000;
-    color: #fff;
-    text-align: center;
-    font-size: 1.2em;
-}
-
 $n: 12;
 $c: #0099ff red;
 $d: 20em;
@@ -124,13 +117,15 @@ $t: 4s;
 
 main {
   display: flex;
+  height: 100%;
+  width: 200px;
+  margin: 0 auto;
   justify-content: center;
   align-items: center;
-  height: 100%;
   background-image: url(../../img/webcamH.png);
   background-size: contain;
   background-repeat: no-repeat;
-  background-position-x: center;
+  background-position: center;
 
   svg {
     width: $d; height: $d;
@@ -159,3 +154,16 @@ main {
     }
   }
 }
+
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 15px 0;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    font-size: 1.2em;
+}
+
