--- a/public/css/my_style.css
+++ b/public/css/my_style.css
@@ -23,7 +23,7 @@ body {
 
 h1 {
   text-align: center;
-  margin-bottom: 60px;
+  margin: 40px 0 40px;
 }
 
 nav#menu {
@@ -35,15 +35,15 @@ nav#menu {
 nav#menu > a {
   display: inline-block;
   vertical-align: top;
-  padding: 5px 10px;
-  margin: 0 5px;
+  padding: 7px 11px;
+  margin: 0 4px;
   font-size: 1.5em;
-  background-color: #fff;
+  background-color: #000;
 }
 
 nav#menu > a {
   text-decoration: none;
-  color: #000;
+  color: #fff;
 }
 
 .container-headline {
@@ -108,6 +108,23 @@ form#formPicture {
   margin: 20px auto;
 }
 
+#canvas-container {
+  position: relative;
+}
+
+#canvas-container > #canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#canvas-container > #canvasFilter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+
 main {
   display: flex;
   height: 100%;
@@ -130,7 +147,7 @@ main svg {
   stroke-dasharray: 283, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-0 4s 1s linear infinite alternate;
+  animation: circleInMotion-0 4s 8s linear infinite alternate;
 }
 
 @keyframes circleInMotion-0 {
@@ -150,7 +167,7 @@ main svg {
   stroke-dasharray: 258, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-1 4s 7s linear infinite alternate;
+  animation: circleInMotion-1 4s 3s linear infinite alternate;
 }
 
 @keyframes circleInMotion-1 {
@@ -170,7 +187,7 @@ main svg {
   stroke-dasharray: 233, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-2 4s 1s linear infinite alternate;
+  animation: circleInMotion-2 4s 5s linear infinite alternate;
 }
 
 @keyframes circleInMotion-2 {
@@ -190,7 +207,7 @@ main svg {
   stroke-dasharray: 208, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-3 4s 5s linear infinite alternate;
+  animation: circleInMotion-3 4s 9s linear infinite alternate;
 }
 
 @keyframes circleInMotion-3 {
@@ -230,7 +247,7 @@ main svg {
   stroke-dasharray: 158, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-5 4s 9s linear infinite alternate;
+  animation: circleInMotion-5 4s 10s linear infinite alternate;
 }
 
 @keyframes circleInMotion-5 {
@@ -250,7 +267,7 @@ main svg {
   stroke-dasharray: 133, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-6 4s 9s linear infinite alternate;
+  animation: circleInMotion-6 4s 1s linear infinite alternate;
 }
 
 @keyframes circleInMotion-6 {
@@ -270,7 +287,7 @@ main svg {
   stroke-dasharray: 108, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-7 4s 3s linear infinite alternate;
+  animation: circleInMotion-7 4s 5s linear infinite alternate;
 }
 
 @keyframes circleInMotion-7 {
@@ -310,7 +327,7 @@ main svg {
   stroke-dasharray: 58, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-9 4s 7s linear infinite alternate;
+  animation: circleInMotion-9 4s 5s linear infinite alternate;
 }
 
 @keyframes circleInMotion-9 {
@@ -330,7 +347,7 @@ main svg {
   stroke-dasharray: 33, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-10 4s 3s linear infinite alternate;
+  animation: circleInMotion-10 4s 7s linear infinite alternate;
 }
 
 @keyframes circleInMotion-10 {
@@ -350,7 +367,7 @@ main svg {
   stroke-dasharray: 8, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-11 4s 2s linear infinite alternate;
+  animation: circleInMotion-11 4s 3s linear infinite alternate;
 }
 
 @keyframes circleInMotion-11 {
