--- a/public/css/my_style.scss
+++ b/public/css/my_style.scss
@@ -28,7 +28,7 @@ body {
 
 h1 { 
     text-align: center;
-    margin-bottom: 60px;
+    margin: 40px 0 40px;
 }
 
 nav#menu {
@@ -40,15 +40,15 @@ nav#menu {
 nav#menu > a {
     display: inline-block;
     vertical-align: top;
-    padding: 5px 10px;
-    margin: 0 5px;
+    padding: 7px 11px;
+    margin: 0 4px;
     font-size: 1.5em;
-    background-color: #fff;
+    background-color: #000;
 }
 
 nav#menu > a {
     text-decoration : none;
-    color: #000;
+    color: #fff;
 }
 
 .container-headline {
@@ -108,6 +108,23 @@ form#formPicture {
     text-align: right;
     padding: 0 25px;
     margin: 20px auto;
+}
+
+#canvas-container {
+    position: relative;
+}
+
+#canvas-container > #canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#canvas-container > #canvasFilter{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
 }
 
 $n: 12;
