--- a/public/css/my_style.css
+++ b/public/css/my_style.css
@@ -174,6 +174,20 @@ form#formPicture {
   z-index: 50;
 }
 
+.liked {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  background-image: url("../../img/heart_pink.png");
+}
+
+.not-liked {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  background-image: url("../../img/heart_small.png");
+}
+
 #forgot {
   width: 70%;
   height: 30px;
@@ -221,7 +235,7 @@ main svg {
   stroke-dasharray: 283, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-0 3s 10s linear infinite alternate;
+  animation: circleInMotion-0 3s 2s linear infinite alternate;
 }
 
 @keyframes circleInMotion-0 {
@@ -261,7 +275,7 @@ main svg {
   stroke-dasharray: 233, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-2 3s 6s linear infinite alternate;
+  animation: circleInMotion-2 3s 4s linear infinite alternate;
 }
 
 @keyframes circleInMotion-2 {
@@ -281,7 +295,7 @@ main svg {
   stroke-dasharray: 208, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-3 3s 6s linear infinite alternate;
+  animation: circleInMotion-3 3s 2s linear infinite alternate;
 }
 
 @keyframes circleInMotion-3 {
