--- a/public/css/my_style.css
+++ b/public/css/my_style.css
@@ -28,7 +28,7 @@ body {
   font-family: "terminal_grotesque";
   background-image: url(feature.png);
   background-repeat: repeat;
-  font-size: 10px;
+  font-size: 12px;
   box-sizing: border-box;
 }
 
@@ -168,9 +168,31 @@ CAMERA
 }
 form {
   width: 70%;
-  padding: 25px;
+  padding: 25px 25px 45px 25px;
   margin: 20px auto;
   background-color: #fff;
+}
+
+form > input[type=submit] {
+  float: right;
+}
+
+@media (max-width: 414px) {
+  form {
+    padding: 25px 25px 55px 25px;
+  }
+
+  form > input[type=submit] {
+    margin-top: 20px;
+  }
+}
+form .bloc,
+form .bloc > label {
+  padding: 5px 0;
+}
+
+form .bloc > * {
+  display: block;
 }
 
 form label {
@@ -181,10 +203,6 @@ form label#labelmdp {
   margin-right: 24px;
 }
 
-form > input[type=submit] {
-  float: right;
-}
-
 form > input[type=text], form #username,
 form > input[type=password], form #mdp {
   border: solid 1px #000;
@@ -193,10 +211,26 @@ form > input[type=password], form #mdp {
 
 input[type=submit], input[type=file], button {
   -webkit-appearance: none;
-  border: solid 1px #000;
+  border: solid 1px #00ffea;
   border-radius: 1px;
-  background-color: #000;
-  color: white;
+  background-color: #00ffea;
+  color: black;
+  padding: 6px 16px;
+}
+
+form#formLogin > .bloc > input[type=text],
+form#formLogin > .bloc > input[type=password],
+form#formRegister > .bloc > input[type=text],
+form#formRegister > .bloc > input[type=password],
+form#formModif > .bloc > input[type=text],
+form#formModif > .bloc > input[type=password],
+form#formPasswd > .bloc > input[type=password],
+form#formPasswd > .bloc > input[type=text] {
+  border: none;
+  border-bottom: 2px solid black;
+  background-color: #00fdff30;
+  width: 200px;
+  padding: 4px;
 }
 
 form#formPicture {
@@ -320,7 +354,7 @@ form#formPicture {
   stroke-dasharray: 283, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-0 3s 4s linear infinite alternate;
+  animation: circleInMotion-0 3s 3s linear infinite alternate;
 }
 
 @keyframes circleInMotion-0 {
@@ -340,7 +374,7 @@ form#formPicture {
   stroke-dasharray: 258, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-1 3s 8s linear infinite alternate;
+  animation: circleInMotion-1 3s 4s linear infinite alternate;
 }
 
 @keyframes circleInMotion-1 {
@@ -360,7 +394,7 @@ form#formPicture {
   stroke-dasharray: 233, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-2 3s 3s linear infinite alternate;
+  animation: circleInMotion-2 3s 1s linear infinite alternate;
 }
 
 @keyframes circleInMotion-2 {
@@ -380,7 +414,7 @@ form#formPicture {
   stroke-dasharray: 208, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-3 3s 5s linear infinite alternate;
+  animation: circleInMotion-3 3s 2s linear infinite alternate;
 }
 
 @keyframes circleInMotion-3 {
