--- a/public/css/my_style.scss
+++ b/public/css/my_style.scss
@@ -37,7 +37,7 @@ body {
     font-family: 'terminal_grotesque';
     background-image: url(feature.png);
     background-repeat: repeat;
-    font-size: 10px;
+    font-size: 12px;
     box-sizing: border-box;
 }
 
@@ -161,9 +161,31 @@ CAMERA
 
 form {
     width: 70%;
-    padding: 25px;
+    padding: 25px 25px 45px 25px;
     margin: 20px auto;
     background-color: #fff;
+}
+
+form > input[type="submit"] {
+    float: right;
+}
+
+@media (max-width: 414px) {
+    form {
+        padding: 25px 25px 55px 25px;
+    }
+    form > input[type=submit] {
+        margin-top: 20px;
+    }
+}
+
+form .bloc,
+form .bloc > label{
+    padding: 5px 0;
+}
+
+form .bloc > *{
+    display: block;
 }
 
 form label {
@@ -174,9 +196,7 @@ form label#labelmdp{
     margin-right: 24px;
 }
 
-form > input[type="submit"] {
-    float: right;
-}
+
 
 form > input[type="text"], form #username,
 form > input[type="password"], form #mdp{
@@ -186,10 +206,26 @@ form > input[type="password"], form #mdp{
 
 input[type="submit"], input[type="file"], button {
     -webkit-appearance: none;
-    border: solid 1px #000;
+    border: solid 1px #00ffea;
     border-radius: 1px;
-    background-color: #000;
-    color: white;
+    background-color: #00ffea;
+    color: black;
+    padding: 6px 16px;
+}
+
+form#formLogin > .bloc > input[type="text"],
+form#formLogin > .bloc > input[type="password"],
+form#formRegister > .bloc > input[type="text"],
+form#formRegister > .bloc > input[type="password"],
+form#formModif > .bloc > input[type="text"],
+form#formModif > .bloc > input[type="password"],
+form#formPasswd > .bloc > input[type="password"],
+form#formPasswd > .bloc > input[type="text"] {
+    border: none;
+    border-bottom: 2px solid black;
+    background-color: #00fdff30;
+    width: 200px;
+    padding: 4px;
 }
 
 form#formPicture {
