--- a/public/css/my_style.css
+++ b/public/css/my_style.css
@@ -40,10 +40,14 @@ body {
 
 div.content {
   flex: auto;
+  margin-bottom: 150px;
 }
 
 footer {
-  flex-shrink: 0;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
   padding: 15px 0;
   background-color: #000;
   color: #fff;
@@ -203,17 +207,32 @@ form label#labelmdp {
   margin-right: 24px;
 }
 
-form > input[type=text], form #username,
-form > input[type=password], form #mdp {
+input[type=text], form #username,
+input[type=password], form #mdp {
   border: solid 1px #000;
   border-radius: 1px;
 }
 
-input[type=submit], input[type=file], button {
+.btn-child {
+  margin: 5px 0;
+}
+
+#formLogin input[type=submit], #formRegister input[type=submit],
+#formNotif input[type=submit],
+#formModif input[type=submit], #formPasswd input[type=submit] {
   -webkit-appearance: none;
   border: solid 1px #00ffea;
   border-radius: 1px;
   background-color: #00ffea;
+  color: black;
+  padding: 6px 16px;
+}
+
+form#formPicture input[type=submit], form#formPicture input[type=file], form#formPicture button {
+  -webkit-appearance: none;
+  border: solid 1px #00ffea;
+  background-color: white;
+  border-radius: 5px;
   color: black;
   padding: 6px 16px;
 }
@@ -233,47 +252,66 @@ form#formPasswd > .bloc > input[type=text] {
   padding: 4px;
 }
 
+#bodyCam {
+  width: 100%;
+}
+
 form#formPicture {
   display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
   text-align: center;
   background-color: transparent;
 }
 
+.btn-container, .more {
+  text-align: center;
+  background-color: aqua;
+}
+
 .filters, .more {
-  background-color: #ffff008c;
   box-sizing: border-box;
   padding: 10px 15px;
 }
 
-/*
-.more {
-    //float: right;
-    //width: 20%;
-    //align-self: flex-end;
-   // border-left: black 2px solid;
-}*/
+.btn-container {
+  padding: 20px 0;
+}
+
+.more > * {
+  display: block;
+  width: 49%;
+  margin: 5px auto;
+}
+
+.more > input.input {
+  border-radius: 5px;
+  -webkit-appearance: none;
+  border-style: none;
+  padding: 20px 0px;
+  text-align: center;
+}
+
 .filters {
-  width: 10%;
-  border-right: black 2px solid;
+  width: 100%;
 }
 
 .filter {
   width: 25px;
-  width: 25px;
+  height: 25px;
 }
 
 .webcam {
   display: flex;
-  width: 70%;
-}
-
-.webcam > div {
-  padding: 10px 15px;
-  flex: 1 100%;
+  width: 100%;
 }
 
 .webcam > .preview {
   border-right: black 2px solid;
+}
+
+.results, .preview {
+  width: 45%;
 }
 
 .live {
@@ -286,13 +324,88 @@ form#formPicture {
 .live > #imgFilter, .live > #video {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 16%;
 }
 
 .live > #imgFilter {
   z-index: 50;
 }
 
+.min {
+  width: 10%;
+  text-align: right;
+}
+
+.min > img {
+  width: 75px;
+  height: 75px;
+}
+
+#canvas-container {
+  position: relative;
+  top: 0;
+  left: 16%;
+}
+
+#canvas-container > #canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#canvas-container > #canvasFilter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+
+@media (max-width: 414px) {
+  .container-headline {
+    display: none;
+  }
+
+  .results, .preview {
+    width: 100%;
+  }
+
+  #canvas-container {
+    top: -750px;
+  }
+
+  .live {
+    margin-bottom: 750px;
+  }
+
+  .webcam > .preview {
+    border-right: none;
+  }
+
+  .filter {
+    width: 50px;
+    height: 50px;
+  }
+
+  .min {
+    width: 100%;
+    text-align: center;
+  }
+
+  form#formPicture {
+    padding: 0;
+    width: 100%;
+  }
+
+  .filters {
+    width: 100%;
+  }
+
+  .webcam {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+}
 .liked {
   width: 24px;
   height: 24px;
@@ -313,23 +426,6 @@ form#formPicture {
   text-align: right;
   padding: 0 25px;
   margin: 20px auto;
-}
-
-#canvas-container {
-  position: relative;
-}
-
-#canvas-container > #canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#canvas-container > #canvasFilter {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 100;
 }
 
 .main-accueil {
@@ -354,7 +450,7 @@ form#formPicture {
   stroke-dasharray: 283, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-0 3s 3s linear infinite alternate;
+  animation: circleInMotion-0 3s 8s linear infinite alternate;
 }
 
 @keyframes circleInMotion-0 {
@@ -374,7 +470,7 @@ form#formPicture {
   stroke-dasharray: 258, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-1 3s 4s linear infinite alternate;
+  animation: circleInMotion-1 3s 1s linear infinite alternate;
 }
 
 @keyframes circleInMotion-1 {
@@ -394,7 +490,7 @@ form#formPicture {
   stroke-dasharray: 233, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-2 3s 1s linear infinite alternate;
+  animation: circleInMotion-2 3s 5s linear infinite alternate;
 }
 
 @keyframes circleInMotion-2 {
@@ -414,7 +510,7 @@ form#formPicture {
   stroke-dasharray: 208, 300;
   stroke-dashoffset: 0;
   stroke-linecap: round;
-  animation: circleInMotion-3 3s 2s linear infinite alternate;
+  animation: circleInMotion-3 3s 9s linear infinite alternate;
 }
 
 @keyframes circleInMotion-3 {
@@ -433,7 +529,39 @@ form#formPicture {
 POST
 ********/
 .post-container {
+  text-align: center;
   margin-bottom: 100px;
+}
+
+.comment-container {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.comment-container > form {
+  border: 1px solid black;
+  width: 50%;
+  margin: 10px auto;
+  padding: 10px;
+  background-color: #0072ff;
+  border-radius: 5px;
+}
+
+.comment-container > form > textarea {
+  border: 1px solid black;
+  -webkit-appearance: none;
+  margin-bottom: 10px;
+  width: 200px;
+  min-height: 50px;
+}
+
+.comment-item > div {
+  border: 1px solid black;
+  width: 50%;
+  margin: 10px auto;
+  padding: 10px;
+  background-color: #ffff00;
+  border-radius: 5px;
 }
 
 .icon {
@@ -441,6 +569,10 @@ POST
   vertical-align: top;
   width: 24px;
   height: 24px;
+}
+
+.date {
+  color: #ec08bc;
 }
 
 .gallery-container {
@@ -477,6 +609,16 @@ a.link-post:hover {
 
 #legend {
   min-height: 15px;
+}
+
+.pages {
+  text-align: center;
+  font-size: 1.5em;
+  margin-top: 50px;
+}
+
+.pages a {
+  color: #0000ff;
 }
 
 /*# sourceMappingURL=my_style.css.map */
